--- a/angular-app/src/app/shared/components/main-header/main-header.component.css
+++ b/angular-app/src/app/shared/components/main-header/main-header.component.css
@@ -75,6 +75,7 @@
     cursor: pointer;
     transition: all 0.2s;
     text-decoration: none;
+    display: block;
 }
 
 .nav-link:hover {
